fixes contrast for nav bar's login

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -175,7 +175,8 @@ iframe {
 }
 
 input.form-control,
-textarea.form-control {
+textarea.form-control,
+input.header-input {
     text-align: center;
     color: $color1;
     border-radius: 5px !important;
@@ -186,15 +187,15 @@ textarea.form-control {
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   color: $color1;  
+   color: $color1;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   color: $color1;  
+   color: $color1;
 }
 
 :-ms-input-placeholder {
-   color: $color1;  
+   color: $color1;
 }
 
 .btn {
